--- a/templates/book_card.html
+++ b/templates/book_card.html
@@ -1,7 +1,27 @@
 <div class="mx-auto flex w-full items-center gap-x-4 rounded-xl bg-white p-6 shadow-lg outline outline-black/5">
   <div>
-    {{ item.id}} : {{ item.title }}.
+    {{ book.id}} : {{ book.title }}
+    <p>
+      {% match owner %}
+        {% when Some with (owner) %}
+          Appartient a {{ owner.name }})
+        {% when None %}
+      {% endmatch %}
+    </p>
+
+    <p>
+      {% match current_holder %}
+        {% when Some with (current_holder) %}
+          (actuellement prêté à {{ current_holder.name }})
+        {% when None %}
+          (pas de prêt en cours)
+      {% endmatch %}
+    </p>
   </div>
 
-  <a class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-auto px-5 py-2.5 text-center" href="/books/{{ item.id }}/edit">Edit</a>
+  <a class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-auto px-5 py-2.5 text-center" href="/books/{{ book.id }}/edit">Edit</a>
+  
+  <form action="/books/{{ book.id }}/delete" method="post">
+    <button type="submit" class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-blue-red font-medium rounded-lg text-sm w-auto px-5 py-2.5 text-center">Delete</a>
+  </form>
 </div>
