Add some front fixes

--- a/templates/book_card.html
+++ b/templates/book_card.html
@@ -4,7 +4,7 @@
     <p>
       {% match owner %}
         {% when Some with (owner) %}
-          Appartient a {{ owner.name }})
+          Appartient a {{ owner.name }}
         {% when None %}
       {% endmatch %}
     </p>
