--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -26,9 +26,9 @@
 
   <form action="/users" method="post" class="mt-10">
     <div>
-      <div>
-        <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Name</label>
-        <input type="text" name="name" id="name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Ex: Karl Marx" required />
+      <div class="mb-3">
+        <label for="name" class="block mb-2 text-sm font-medium text-gray-900">Name</label>
+        <input type="text" name="name" id="name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Ex: Karl Marx" required autofocus />
       </div>
     </div>
 
