Add Alpine and JS and improve forms

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -11,4 +11,6 @@
   <div class="p-8">
     {% block body %}{% endblock %}
   </div>
+
+  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </body>
