--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <a href="/" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Reinitialization</a>
   </form>
 
-  <div class="grid sm:grid-cols-2 gap-4">
+  <div class="grid sm:grid-cols-2 gap-4 mt-3">
     {% for (book, owner, current_holder) in books_with_users %}
       {% include "book_card.html" %}
     {% endfor %}
