--- a/templates/books/new.html
+++ b/templates/books/new.html
@@ -4,10 +4,94 @@
 
 {% block body %}
 <form action="/books" method="post">
-  <div>
+  <div x-data="{
+        query: '',
+        items: [],
+        open: false,
+        loading: false,
+        coverUrl: '',
+        title: '',
+        async searchItems() {
+            if (this.query.length === 0) {
+                this.items = [];
+                return;
+            }
+            
+            this.loading = true;
+            try {
+                const response = await fetch(
+                    `/books/search?query=${encodeURIComponent(this.query)}`
+                );
+                const result = await response.json();
+                this.items = result.docs;
+                this.open = true;
+            } catch (error) {
+                console.error('Erreur:', error);
+            } finally {
+                this.loading = false;
+            }
+        },
+        selectItem(item) {
+          this.title = item.title;
+          this.coverUrl = `https://covers.openlibrary.org/b/OLID/${item.cover_edition_key}-L.jpg`;
+          this.items = []; // Vider les résultats
+          this.open = false;
+        }
+    }">
+    <div class="mb-3">
+      <label for="search" class="block mb-2 text-sm font-medium text-gray-900">Recherche sur OpenLibrary</label>
+      <input 
+        type="text"
+        name="search"
+        id="search"
+        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+        placeholder="Ex: Lord of the ring, Virginia Wolff" 
+        x-model="query"
+        @input.debounce.300ms="searchItems()"
+      />
+
+      <p x-show="loading">🔄 Recherche...</p>
+        
+      <ul x-show="open">
+        <template x-for="item in items" :key="items.indexOf(item)">
+          <li class="item" @click="selectItem(item)">
+            <h3 x-text="item.title"></h3>
+            <p x-text="item.author_name"></p>
+          </li>
+        </template>
+      </ul>
+      
+      <p x-show="items.length === 0 && query && !loading && open">
+        Aucun résulta
+      </p>
+    </div>
+     
     <div class="mb-3">
       <label for="title" class="block mb-2 text-sm font-medium text-gray-900">Title</label>
-      <input type="text" name="title" id="title" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Ex: Lord of the ring" required />
+      <input 
+        type="text"
+        name="title"
+        id="title"
+        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+        placeholder="Ex: Lord of the ring" 
+        required 
+        x-model="title"
+      />
+    </div>
+
+    <div class="mb-3">
+      <label for="description" class="block mb-2 text-sm font-medium text-gray-900">description</label>
+      <textarea name="description" id="description" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"></textarea>
+    </div>
+
+    <div class="mb-3">
+      <label for="cover_url" class="block mb-2 text-sm font-medium text-gray-900">Cover Url</label>
+      <input type="text" name="cover_url" id="cover_url" value="" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" x-model="coverUrl" />
+    </div>
+
+    <div class="mb-3">
+      <label for="open_library_link" class="block mb-2 text-sm font-medium text-gray-900">Open Library Url</label>
+      <input type="text" name="open_library_link" id="open_library_link" value="" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
     </div>
 
     <div class="mb-3">
