--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -10,6 +10,10 @@
         <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap">
           name
         </th>  
+
+        <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap">
+          Actions
+        </th>  
       </tr>
     </thead>
 
@@ -18,6 +22,13 @@
         <tr>    
           <td class="px-6 py-4">
             {{ user.name }}
+          </td>  
+          <td class="px-6 py-4 flex gap-2">
+            <a class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-auto px-5 py-2.5 text-center" href="/users/{{ user.id }}/edit">Edit</a>
+
+            <form action="/users/{{ user.id }}/delete" method="post">
+              <button type="submit" class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-blue-red font-medium rounded-lg text-sm w-auto px-5 py-2.5 text-center">Delete</a>
+            </form>
           </td>  
         </tr>    
       {% endfor %}
