--- a/templates/_base.html
+++ b/templates/_base.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8" />  
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/main.css">
   <title>{% block title %}{% endblock %}</title>
 {% endblock %}
 
