--- a/templates/book_card.html
+++ b/templates/book_card.html
@@ -1,29 +1,35 @@
-<div class="mx-auto flex w-full items-center gap-x-4 rounded-xl bg-white p-6 shadow-lg outline outline-black/5">
-  <div>
-    {{ book.id}} : {{ book.title }}
-    <p>
+<div>
+  <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 relative">
+    <div style="height: 300px;" class="overflow-hidden">
       {% match owner %}
         {% when Some with (owner) %}
-          Appartient a {{ owner.name }}
+          <div class="absolute top-3 right-3 inline-block whitespace-nowrap rounded bg-white p-1 text-center align-baseline leading-none text-primary-700 dark:bg-slate-900 dark:text-primary-500">
+            Appartient a {{ owner.name }}
+          </div>
         {% when None %}
       {% endmatch %}
-    </p>
 
-    <p>
-      {% match current_holder %}
-        {% when Some with (current_holder) %}
-          (actuellement prêté à {{ current_holder.name }})
-        {% when None %}
-          (pas de prêt en cours)
-      {% endmatch %}
-    </p>
+      <img src="{{ book.cover_url | display_some }}" class="w-full" />
+    </div>
+
+    <div class="p-5">
+      <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white">{{ book.title }}</h5>
+      <h6 class="text-md text-gray-600">George Orwell</h6>
+
+      <p class="mt-3 mb-3 font-normal text-gray-600 dark:text-gray-400">
+        {% match book.description %}
+          {% when Some with (description) %}
+            {{ description }}
+          {% when None %}
+        {% endmatch %}
+      </p>
+
+      <a href="/books/{{ book.id }}" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+        Read more
+        <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+        </svg>
+      </a>
+    </div>
   </div>
-
-  <a class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-auto px-5 py-2.5 text-center" href="/books/{{ book.id }}/edit">Edit</a>
-
-  <a class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-auto px-5 py-2.5 text-center" href="/books/{{ book.id }}">Voir</a>
-  
-  <form action="/books/{{ book.id }}/delete" method="post">
-    <button type="submit" class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-blue-red font-medium rounded-lg text-sm w-auto px-5 py-2.5 text-center">Delete</a>
-  </form>
 </div>
