--- a/templates/books/show.html
+++ b/templates/books/show.html
@@ -27,5 +27,8 @@
 
 <div class="mt-3">
   <a class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-auto px-5 py-2.5 text-center" href="/books/{{ book.id }}/edit">Edit</a>
+  <form action="/books/{{ book.id }}/delete" method="post">
+    <button type="submit" class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-blue-red font-medium rounded-lg text-sm w-auto px-5 py-2.5 text-center">Delete</a>
+  </form>
 </div>
 {% endblock %}
