--- a/templates/book_card.html
+++ b/templates/book_card.html
@@ -1,9 +1,9 @@
 <div>
-  <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 relative">
-    <div style="height: 300px;" class="overflow-hidden">
+  <div class="max-w bg-white border border-gray-200 rounded-lg shadow-md relative h-full overflow-hidden">
+    <div style="height: 250px;" class="overflow-hidden">
       {% match owner %}
         {% when Some with (owner) %}
-          <div class="absolute top-3 right-3 inline-block whitespace-nowrap rounded bg-white p-1 text-center align-baseline leading-none text-primary-700 dark:bg-slate-900 dark:text-primary-500">
+          <div class="absolute top-3 right-3 inline-block whitespace-nowrap rounded bg-white p-1 text-center align-baseline leading-none text-primary-700">
             Appartient a {{ owner.name }}
           </div>
         {% when None %}
@@ -12,24 +12,28 @@
       <img src="{{ book.cover_url | display_some }}" class="w-full" />
     </div>
 
-    <div class="p-5">
-      <h5 class="text-md font-bold tracking-tight text-gray-900 dark:text-white">{{ book.title }}</h5>
-      <h6 class="text-md text-gray-600">George Orwell</h6>
+    <div class="p-5 h-full flex flex-col justify-space-between">
+      <div>
+        <h5 class="text-md font-bold tracking-tight text-gray-900">{{ book.title }}</h5>
+        <h6 class="text-md text-gray-600">George Orwell</h6>
 
-      <p class="mt-3 mb-3 font-normal text-gray-600 dark:text-gray-400">
-        {% match book.description %}
-          {% when Some with (description) %}
-            {{ description }}
-          {% when None %}
-        {% endmatch %}
-      </p>
+        <p class="mt-3 mb-3 font-normal text-gray-600">
+          {% match book.description %}
+            {% when Some with (description) %}
+              {{ description }}
+            {% when None %}
+          {% endmatch %}
+        </p>
+      </div> 
 
-      <a href="/books/{{ book.id }}" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-        Read more
-        <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-        </svg>
-      </a>
+      <div>
+        <a href="/books/{{ book.id }}" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300">
+          Read more
+          <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+          </svg>
+        </a>
+      </div> 
     </div>
   </div>
 </div>
