--- a/templates/index.html
+++ b/templates/index.html
@@ -10,32 +10,53 @@
       current_holder_id: new URLSearchParams(window.location.search).get('current_holder_id') || '',
     }"
   >
-    <label for="search" class="block mb-2 text-sm font-medium text-gray-900">Search Book by title</label>
-    <input type="text" name="q" id="q" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Ex: Lord of the ring" x-model="q" />
+    <div class="max-w">
+      <div class="rounded-xl border border-gray-200 bg-white p-6 shadow-md">
+        <h2 class="text-stone-700 text-xl font-bold">Apply filters</h2>
+        <p class="mt-1 text-sm">Use filters to further refine search</p>
 
-    <label for="owner_id" class="block mb-2 text-sm font-medium text-gray-900">Select an owner</label>
-    <select id="owner_id" name="owner_id" x-model="owner_id" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-      <option value=""></option>
-      {% for user in users %}
-        <option value="{{ user.id }}">{{ user.name }}</option>
-      {% endfor %}
-    </select>
+        <div class="mt-8 grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
+          <div class="flex flex-col">
+            <label for="search" class="text-stone-600 text-sm font-medium">Search Book by title</label>
+            <input type="text" name="q" id="q" class="mt-2 block w-full rounded-md border border-gray-200 px-2 py-2 shadow-sm outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" placeholder="Ex: Lord of the ring" x-model="q" />
+          </div>
 
-    <label for="current_holder_id" class="block mb-2 text-sm font-medium text-gray-900">Current holder id</label>
-    <select id="current_holder_id" name="current_holder_id" x-model="current_holder_id" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-      <option value=""></option>
-      {% for user in users %}
-        <option value="{{ user.id }}">{{ user.name }}</option>
-      {% endfor %}
-    </select>
+          <div class="flex flex-col">
+            <label for="owener_id" class="text-stone-600 text-sm font-medium">Owner</label>
+            <select id="owner_id" name="owner_id" x-model="owner_id" class="mt-2 block w-full rounded-md border border-gray-200 px-2 py-2 shadow-sm outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50">
+              <option value=""></option>
+              {% for user in users %}
+                <option value="{{ user.id }}">{{ user.name }}</option>
+              {% endfor %}
+            </select>
+          </div>
 
-    <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Search</button>
-    <a href="/" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Reinitialization</a>
+          <div class="flex flex-col">
+            <label for="current_holder_id" class="text-stone-600 text-sm font-medium">Current Holder</label>
+            <select id="current_holder_id" name="current_holder_id" x-model="current_holder_id" class="mt-2 block w-full rounded-md border border-gray-200 px-2 py-2 shadow-sm outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50">
+              <option value=""></option>
+              {% for user in users %}
+                <option value="{{ user.id }}">{{ user.name }}</option>
+              {% endfor %}
+            </select>
+          </div>
+        </div>
+
+        <div class="mt-6 grid w-full grid-cols-2 justify-end space-x-4 md:flex">
+          <a href="/" class="active:scale-95 rounded-lg bg-gray-200 px-8 py-2 font-medium text-gray-600 outline-none focus:ring hover:opacity-90">Reset</a>
+          <button type="submit" class="active:scale-95 rounded-lg bg-blue-600 px-8 py-2 font-medium text-white outline-none focus:ring hover:opacity-90">Search</button>
+        </div>
+      </div>
+    </div>
   </form>
 
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-2 mt-3">
-    {% for (book, owner, current_holder) in books_with_users %}
-      {% include "book_card.html" %}
-    {% endfor %}
-  </div>
+  {% if books_with_users.len() > 0 %}
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-5 mt-10">
+      {% for (book, owner, current_holder) in books_with_users %}
+        {% include "book_card.html" %}
+      {% endfor %}
+    </div>
+  {% else %}
+    No result
+  {% endif %}
 {% endblock %}
