--- a/templates/book_card.html
+++ b/templates/book_card.html
@@ -15,7 +15,7 @@
     <div class="p-5 h-full flex flex-col justify-space-between">
       <div>
         <h5 class="text-md font-bold tracking-tight text-gray-900">{{ book.title }}</h5>
-        <h6 class="text-md text-gray-600">George Orwell</h6>
+        <h6 class="text-md text-gray-600">{{ book.authors }}</h6>
 
         <p class="mt-3 mb-3 font-normal text-gray-600">
           {% match book.description %}
