--- a/templates/book_card.html
+++ b/templates/book_card.html
@@ -4,7 +4,8 @@
       {% match owner %}
         {% when Some with (owner) %}
           <div class="absolute top-3 right-3 inline-block whitespace-nowrap rounded bg-white p-1 text-center align-baseline leading-none text-primary-700">
-            Appartient a {{ owner.name }}
+
+            {{ t!("book_card.belongs_to", name = owner.name) }}
           </div>
         {% when None %}
       {% endmatch %}
@@ -28,7 +29,7 @@
 
       <div>
         <a href="/books/{{ book.id }}" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300">
-          Read more
+          {{ t!("book_card.read_more") }}
           <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
           </svg>
