--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
 {% extends "_base.html" %}
 
-{% block title %}Dashboard{% endblock %}
+{% block title %}{{ t!("home.title") }}{% endblock %}
 
 {% block body %}
-  <form method="get" 
+  <form method="get"
     x-data="{
       q: new URLSearchParams(window.location.search).get('q') || '',
       owner_id: new URLSearchParams(window.location.search).get('owner_id') || '',
@@ -13,22 +13,25 @@
   >
     <div class="max-w">
       <div class="rounded-xl border border-gray-200 bg-white p-6 shadow-md">
-        <h2 class="text-stone-700 text-xl font-bold">Apply filters</h2>
-        <p class="mt-1 text-sm">Use filters to further refine search</p>
+        <h2 class="text-stone-700 text-xl font-bold">{{ t!("home.filter.title") }}</h2>
 
         <div class="mt-8 grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
           <div class="flex flex-col">
-            <label for="q" class="text-stone-600 text-sm font-medium">Search Book by title</label>
+            <label for="q" class="text-stone-600 text-sm font-medium">
+              {{ t!("attributes.book.title") }}
+            </label>
             <input type="text" name="q" id="q" class="mt-2 block w-full rounded-md border border-gray-200 px-2 py-2 shadow-sm outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" placeholder="Ex: Lord of the ring" x-model="q" />
           </div>
 
           <div class="flex flex-col">
-            <label for="authors" class="text-stone-600 text-sm font-medium">Search Book by author.s</label>
+            <label for="authors" class="text-stone-600 text-sm font-medium">{{ t!("attributes.book.authors") }}</label>
             <input type="text" name="authors" id="authors" class="mt-2 block w-full rounded-md border border-gray-200 px-2 py-2 shadow-sm outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" placeholder="Ex: Pierre Kropotkine" x-model="authors" />
           </div>
 
           <div class="flex flex-col">
-            <label for="owener_id" class="text-stone-600 text-sm font-medium">Owner</label>
+            <label for="owner_id" class="text-stone-600 text-sm font-medium">
+              {{ t!("attributes.book.owner_id") }}
+            </label>
             <select id="owner_id" name="owner_id" x-model="owner_id" class="mt-2 block w-full rounded-md border border-gray-200 px-2 py-2 shadow-sm outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50">
               <option value=""></option>
               {% for user in users %}
@@ -38,7 +41,9 @@
           </div>
 
           <div class="flex flex-col">
-            <label for="current_holder_id" class="text-stone-600 text-sm font-medium">Current Holder</label>
+            <label for="current_holder_id" class="text-stone-600 text-sm font-medium">
+              {{ t!("attributes.book.current_holder_id") }}
+            </label>
             <select id="current_holder_id" name="current_holder_id" x-model="current_holder_id" class="mt-2 block w-full rounded-md border border-gray-200 px-2 py-2 shadow-sm outline-none focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50">
               <option value=""></option>
               {% for user in users %}
@@ -49,8 +54,8 @@
         </div>
 
         <div class="mt-6 grid w-full grid-cols-2 justify-end space-x-4 md:flex">
-          <a href="/" class="active:scale-95 rounded-lg bg-gray-200 px-8 py-2 font-medium text-gray-600 outline-none focus:ring hover:opacity-90">Reset</a>
-          <button type="submit" class="active:scale-95 rounded-lg bg-blue-600 px-8 py-2 font-medium text-white outline-none focus:ring hover:opacity-90">Search</button>
+          <a href="/" class="active:scale-95 rounded-lg bg-gray-200 px-8 py-2 font-medium text-gray-600 outline-none focus:ring hover:opacity-90">{{ t!("home.filter.reset") }}</a>
+          <button type="submit" class="active:scale-95 rounded-lg bg-blue-600 px-8 py-2 font-medium text-white outline-none focus:ring hover:opacity-90">{{ t!("home.filter.search") }}</button>
         </div>
       </div>
     </div>
@@ -63,6 +68,6 @@
       {% endfor %}
     </div>
   {% else %}
-    No result
+    {{ t!("home.no_result") }}
   {% endif %}
 {% endblock %}
