--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,6 @@
       {% endfor %}
     </div>
   {% else %}
-    {{ t!("home.no_result") }}
+    {{ t!("common.no_results") }}
   {% endif %}
 {% endblock %}
